--- a/pages/tabelas/TabelasProdutos.html
+++ b/pages/tabelas/TabelasProdutos.html
@@ -6,6 +6,12 @@
     <title>Tabela</title>
 </head>
 <body>
+    <style>
+        table, th, td{
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
     <table>
         <thead>
             <tr>
@@ -18,37 +24,37 @@
             <tr>
                 <th>1</th>
                 <th>Café</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th><img src="Cafe-2.jpg" alt="Café" width="50"></th>
+                <th>1</th>
+                <th>R$4,50</th>
             </tr>
             <tr>
                 <th>2</th>
                 <th>Leite</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th><img src="848x1007px-uht-integral-frontal-esquerda-461.webp" alt="Leite" width="50"></th>
+                <th>1</th>
+                <th>R$5,50</th>
             </tr>
             <tr>
                 <th>3</th>
                 <th>Suco de Uva</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th><img src="Suco de Uva.jpg" alt="Uva" width="50"></th>
+                <th>6</th>
+                <th>R$15,00</th>
             </tr>
             <tr>
                 <th>4</th>
                 <th>Coca Cola</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th><img src="coca.webp" alt="coca" width="50"></th>
+                <th>1</th>
+                <th>R$7,50</th>
             </tr>
             <tr>
                 <th>5</th>
                 <th>Cerveja</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th><img src="heineken.webp" alt="cerveja" width="50"></th>
+                <th>1</th>
+                <th>R$9,50</th>
             </tr>
         </thead>
     </table>
